
Version 0.1.4
-------------

- windows makefiles: fixed "clean" target to clean subprojects
- added <exename> tag
- changes to bakefile flags in Bakefiles.bkgen are now considered when
  determining whether a makefile is out of date
- borland: fixed subdirs handling for directories that begin with ..
  (idea by Hans Van Leemputten)
- autoconf: OS/2 fixes (Stefan Neis)
- added <pic> for enabling position-independent code for static libraries
- autoconf: added bakefilize tool to make packaging easier
- added <error> command for sanity checking in .bkl files
- new backend for eMbedded Visual C++ 4 project files
- added --pretend option to bakefile_gen tool


Version 0.1.3
-------------

- use mkstemp() to create temporary files if available
- lock output files so that it is possible to run multiple instances of
  bakefile on same tree
- added -j flag to bakefile_gen for simultaneous execution of more bakefile
  instances on multiprocessor systems
- msvc6prj: don't output external dependencies as first projects in workspace
- added <res-define> and <res-include> tags to specify flags for resource
  compilers but not C/C++ compilers


Version 0.1.2
-------------

- fixed bakefile_gen if Bakefile was installed in directory containing
  space in its name
- fixed configure on Mac OS X
- variables and targets are no longer alphabetically sorted in generated
  makefiles, the order of their declaration in bakefiles is now preserved
  (this fixes the bug when output generated using Python 2.2 was different
  from output if using Python 2.3)


Version 0.1.1
-------------

- first public release